# au-clone-detector

./: .gitignore  README.md  aaaaa.py  lospuntoswe.py  main.py  mequieromatar.py  mmm.py  nominalCall.py  pes2.py  pestanias.py  prueba.py  prueba_nominal.py  prueba_unranked.py  pyproject.toml  requirements.txt  sobresubprocess.py  test_1.py  test_2.py  textos.py  tree.md  unrankedCall.py  we.py
.github/workflows/: build.yml
algoritmos/: example.sh
algoritmos/eqnauac-src/eqnauac/: .project  assembly-jar.xml  assembly-src.xml  pom.xml
algoritmos/eqnauac-src/eqnauac/src/main/webapp/: .firebaserc
algoritmos/urau-src/: SupportedByFWF.txt
algoritmos/urau-src/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
algoritmos/urau-src/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
src/: main.py
src/collectors/: cadena.py  mmm.py  nominalCall.py  parseCode.py  prueba_nominal.py  prueba_unk.py  test_1.py  test_2.py  test_3.py  unrankedCall.py
src/styles/: theme.py
src/ui/: components.py  home_view.py  nominal_view.py  unranked_view.py
venv312/: pyvenv.cfg
webapp/: index.html  prueba_web.py  script.js  style.css
webapp/static/: script.js
webapp/templates/: base.html  index.html  indexantes.html
(+148 files in other folders)
