[project]
name = "nau-clone-detector"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Enzo V. Cornejo", email = "enzopaolo25@gmail.com" }
]
dependencies = [
    "flet>=0.81.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    "flet-desktop-light>=0.81.0",
    "flet-web>=0.81.0",
]

[tool.flet]
org = "com.mycompany"
product = "nau-clone-detector"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
