[project]
name = "nau-clone-detector"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Enzo V. Cornejo", email = "enzopaolo25@gmail.com" }
]
dependencies = [
    "flet>=0.81.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    "flet-desktop-light>=0.81.0",
    "flet-web>=0.81.0",
]

[tool.flet]
org = ""
product = "nau-clone-detector"
company = "Enzo V. Cornejo"
copyright = "Copyright (C) 2026 Enzo V. Cornejo"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.flet.app]
path = "src"
